--- a/Arc/index.html
+++ b/Arc/index.html
@@ -258,7 +258,7 @@
             </div>
             <div v-if="what_draft_law == 'draw_law0'" class="row">
                 <div class="col-7">
-                    <video autoplay muted style="margin: 0;" class="home_bg_vdo2">
+                    <video autoplay muted style="margin: 0;" class="vdo1 home_bg_vdo2">
                         <source src="Architecture/solve/draft law/3.กฎหมายทำแท้งเสรีChrysanthemum1.mp4"
                             type="video/mp4">
                     </video>
@@ -274,7 +274,7 @@
             </div>
             <div v-if="what_draft_law == 'draw_law1'" class="row">
                 <div class="col-5">
-                    <video autoplay muted style="margin: 0;" class="home_bg_vdo2">
+                    <video autoplay muted style="margin: 0;" class="vdo2 home_bg_vdo2">
                         <source src="Architecture/solve/draft law/แต่งงานกับเด็ก1.mp4" type="video/mp4">
                     </video>
                 </div>
@@ -288,25 +288,25 @@
                 </div>
             </div>
             <div v-if="what_draft_law == 'draw_law2'" class="row">
-                <div style="margin-top:10;" class="col-5">
-                    <video autoplay muted style="margin: 0;" class="home_bg_vdo2">
+                <div class="col-5">
+                    <video autoplay muted style="margin: 0;" class="vdo3 home_bg_vdo2">
                         <source src="Architecture/solve/draft law/5-กฎหมายเมืองปลอดภัยเพื่อผู้หญิงPrimrose.mp4"
                             type="video/mp4">
                     </video>
                 </div>
                 <div class="col-7">
                     <!--แก้ layout-->
-                    <p style="margin-left: 125px;" class="topic_text">
+                    <p style="margin-top:2.562225475841874vw; margin-left: 3.294289897510981vw" class="topic_text">
                         {{info.Draftlaw[2].DLName1}}<br> {{info.Draftlaw[2].DLName2}}
                     </p>
-                    <p style="margin-left: 125px;" class="text">
+                    <p style="margin-top:2.562225475841874vw; margin-left: 3.294289897510981vw" class="text">
                         {{info.Draftlaw[2].DLMean1}}<br><br> {{info.Draftlaw[2].DLMean2}}
                     </p>
                 </div>
             </div>
             <div v-if="what_draft_law == 'draw_law3'" class="row">
                 <div class="col-5">
-                    <video autoplay muted style="margin: 0;" class="home_bg_vdo2">
+                    <video autoplay muted style="margin: 0;" class="vdo4 home_bg_vdo2">
                         <source src="Architecture/solve/draft law/6-กฎหมายการแต่งกายในอาชีพต่างๆPansies_1.mp4"
                             type="video/mp4">
                     </video>
@@ -322,7 +322,7 @@
             </div>
             <div v-if="what_draft_law == 'draw_law4'" class="row">
                 <div class="col-5">
-                    <video autoplay muted style="margin: 0;" class="home_bg_vdo2">
+                    <video autoplay muted style="margin: 0;" class="vdo5 home_bg_vdo2">
                         <source src="Architecture/solve/draft law/ค้่าประเวณี.mp4" type="video/mp4">
                     </video>
                 </div>
