--- a/Arc/index.html
+++ b/Arc/index.html
@@ -115,8 +115,8 @@
        <!-- หน้า Law -->
        <div v-if="what_page == 'Law'" class="container">
         <div v-if="what_law == 'Main'" class="row justify-content-around">
-            <div class="col-3"></div>
-            <div class="col-4 align-self-center" v-if="!status_law[0]">
+            <div class="col-1"></div>
+            <div class="col-4 align-self-center text-center" v-if="!status_law[0]">
                 <video @mouseover="Blooming_flowers(true, 'vid6')" @mouseleave="Blooming_flowers(false, 'vid6')"
                     id="vid6" width="200" height="200" muted style="margin: 0;" @click="change_law('law0')">
                     <source src="/Arc/Architecture/solve/flower/Another red flower/Another red flowerps.mp4"
@@ -124,19 +124,19 @@
                 </video> <br>
                 <p>กฎหมายการเลือกตั้ง</p>
             </div>
-            <div class="col-4 align-self-center" v-if="status_law[0]"><img @click="change_law('law0')"
+            <div class="col-4 align-self-center text-center" v-if="status_law[0]"><img @click="change_law('law0')"
                     src="/Arc/Architecture/solve/flower/Another red flower/Another red flower.png"
                     style="width: 200px; height: 200px;"><br>
                 <p>กฎหมายการเลือกตั้ง</p>
             </div>
-            <div class="col align-self-center" v-if="!status_law[1]">
+            <div class="col align-self-center text-center" v-if="!status_law[1]">
                 <video @mouseover="Blooming_flowers(true, 'vid7')" @mouseleave="Blooming_flowers(false, 'vid7')"
                     id="vid7" width="200" height="200" muted style="margin: 0;" @click="change_law('law1')">
                     <source src="/Arc/Architecture/solve/flower/Black flower/Black flowerps.mp4" type="video/mp4">
                 </video> <br>
                 <p>กฎหมายลาคลอด</p>
             </div>
-            <div class="col align-self-center" v-if="status_law[1]"><img @click="change_law('law1')"
+            <div class="col align-self-center text-center" v-if="status_law[1]"><img @click="change_law('law1')"
                     src="/Arc/Architecture/solve/flower/Black flower/Black flower.png"
                     style="width: 200px; height: 200px;"><br>
                 <p>กฎหมายลาคลอด</p>
