--- a/Arc/index.html
+++ b/Arc/index.html
@@ -277,7 +277,7 @@
                 </div>
                 <div class="col-5">
                     <p class="topic_text">
-                        {{info.Draftlaw[0].DLName1}}<br> {{info.Draftlaw[0].DLName2}}
+                        {{info.Draftlaw[0].DLName1}}<br> <d style="font-size: 20pt;">{{info.Draftlaw[0].DLName2}}</d>
                     </p>
                     <p class="text">
                         {{info.Draftlaw[0].DLMean1}}
@@ -291,10 +291,10 @@
                     </video>
                 </div>
                 <div class="col-7">
-                    <p class="topic_text">
-                        {{info.Draftlaw[1].DLName1}}<br> {{info.Draftlaw[1].DLName2}}
+                    <p style="margin-top:2.562225475841874vw;" class="topic_text">
+                        {{info.Draftlaw[1].DLName1}}<br> <d style="font-size: 20pt;">{{info.Draftlaw[1].DLName2}}</d>
                     </p>
-                    <p class="text">
+                    <p style="margin-top:2.562225475841874vw;" class="text">
                         {{info.Draftlaw[1].DLMean1}}
                     </p>
                 </div>
@@ -308,7 +308,7 @@
                 <div class="col-7">
                     <!--แก้ layout-->
                     <p style="margin-top:2.562225475841874vw; margin-left: 3.294289897510981vw" class="topic_text">
-                        {{info.Draftlaw[2].DLName1}}<br> {{info.Draftlaw[2].DLName2}}
+                        {{info.Draftlaw[2].DLName1}}<br> <d style="font-size: 20pt;">{{info.Draftlaw[2].DLName2}}</d>
                     </p>
                     <p style="margin-top:2.562225475841874vw; margin-left: 3.294289897510981vw" class="text">
                         {{info.Draftlaw[2].DLMean1}}<br><br> {{info.Draftlaw[2].DLMean2}}
@@ -323,10 +323,10 @@
                     </video>
                 </div>
                 <div class="col-7">
-                    <p class="topic_text">
-                        {{info.Draftlaw[3].DLName1}}<br> {{info.Draftlaw[3].DLName2}}
+                    <p style="margin-top:2.562225475841874vw;" class="topic_text">
+                        {{info.Draftlaw[3].DLName1}}<br> <d style="font-size: 20pt;">{{info.Draftlaw[3].DLName2}}</d>
                     </p>
-                    <p class="text">
+                    <p style="margin-top:2.562225475841874vw;" class="text">
                         {{info.Draftlaw[3].DLMean1}}<br><br> {{info.Draftlaw[3].DLMean2}}
                     </p>
                 </div>
@@ -339,7 +339,7 @@
                 </div>
                 <div class="col-7">
                     <p class="topic_text">
-                        {{info.Draftlaw[4].DLName1}}<br> {{info.Draftlaw[4].DLName2}}
+                        {{info.Draftlaw[4].DLName1}}<br> <d style="font-size: 20pt;">{{info.Draftlaw[4].DLName2}}</d>
                     </p>
                     <p class="text">
                         {{info.Draftlaw[4].DLMean1}}<br><br> {{info.Draftlaw[4].DLMean2}}
