--- a/Arc/index.html
+++ b/Arc/index.html
@@ -28,8 +28,8 @@
 
         <!-- หน้าก่อนเข้าหน้า Home -->
         <div v-if="what_page == 'Before_Time_To_Bloom'">
-            <video autoplay muted style="margin: 0;" id="before">
-                <source src="Architecture/Page_before entering_home page/time to bloom.mp4" type="video/mp4">
+            <video src="Architecture/Page_before entering_home page/time to bloom.mp4" autoplay muted style="margin: 0;" id="before">
+                <!-- <source src="Architecture/Page_before entering_home page/time to bloom.mp4" type="video/mp4"> -->
             </video>
         </div>
         <!-- หน้าก่อนเข้าหน้า Home -->
@@ -64,8 +64,8 @@
                     <img class="time_to_bloom" src="Architecture/Time_To_Bloom_page/time_to_bloom.png" @click="change_page('Home')">
                 </div>
                 <div class="cal-6">
-                    <video autoplay muted style="margin: 0;" class="Time_To_Bloom_bg_vdo">
-                        <source src="final3 - Copy.mp4" type="video/mp4">
+                    <video src="final3 - Copy.mp4" autoplay muted style="margin: 0;" class="Time_To_Bloom_bg_vdo">
+                        <!-- <source src="final3 - Copy.mp4" type="video/mp4"> -->
                     </video>
                 </div>
             </div>
@@ -76,8 +76,8 @@
         <div v-if="what_page == 'Home'" class="container">
             <div class="row">
                 <div data-aos-anchor-placement="top-center" data-aos="fade-right" class="col-6">
-                    <video autoplay muted style="margin: 0;" class="home_bg_vdo">
-                        <source src="Architecture/solve/homepage/Waterdrop1.mp4" type="video/mp4">
+                    <video src="Architecture/solve/homepage/Waterdrop1.mp4" autoplay muted style="margin: 0;" class="home_bg_vdo">
+                        <!-- <source src="Architecture/solve/homepage/Waterdrop1.mp4" type="video/mp4"> -->
                     </video>
                 </div>
                 <div data-aos-anchor-placement="top-center" data-aos="fade-left" class="col-6" style="padding-left: 5.15625vw; padding-right: -5.15625vw;">
@@ -93,8 +93,8 @@
 
         <div data-aos="fade-up" data-aos-anchor-placement="top-center" v-if="what_page == 'Home'">
 
-            <video autoplay muted style="margin: 0;" class="home_bg_vdo2">
-                <source src="Architecture/solve/homepage/Frame3.mp4" type="video/mp4">
+            <video src="Architecture/solve/homepage/Frame3.mp4" autoplay muted style="margin: 0;" class="home_bg_vdo2">
+                <!-- <source src="Architecture/solve/homepage/Frame3.mp4" type="video/mp4"> -->
             </video>
             <div v-if="what_page == 'Home'" class="container">
                 <div data-aos-anchor-placement="top-center" data-aos="fade-down" class="home_text2">
@@ -114,9 +114,9 @@
             <div v-if="what_law == 'Main'" class="row justify-content-around">
                 <div class="col-1"></div>
                 <div class="col-4 align-self-center text-center" v-if="!status_law[0]">
-                    <video @mouseover="Blooming_flowers(true, 'vid6')" @mouseleave="Blooming_flowers(false, 'vid6')" id="vid6" width="200" height="200" muted style="margin: 0;" @click="change_law('law0')">
-                        <source src="/Arc/Architecture/solve/flower/Anotherredflower/Anotherredflowerps.mp4"
-                            type="video/mp4">
+                    <video src="/Arc/Architecture/solve/flower/Anotherredflower/Anotherredflowerps.mp4" @mouseover="Blooming_flowers(true, 'vid6')" @mouseleave="Blooming_flowers(false, 'vid6')" id="vid6" width="200" height="200" muted style="margin: 0;" @click="change_law('law0')">
+                        <!-- <source src="/Arc/Architecture/solve/flower/Anotherredflower/Anotherredflowerps.mp4"
+                            type="video/mp4"> -->
                     </video> <br>
                     <p>กฎหมายการเลือกตั้ง</p>
                 </div>
@@ -124,8 +124,8 @@
                     <p>กฎหมายการเลือกตั้ง</p>
                 </div>
                 <div class="col align-self-center text-center" v-if="!status_law[1]">
-                    <video @mouseover="Blooming_flowers(true, 'vid7')" @mouseleave="Blooming_flowers(false, 'vid7')" id="vid7" width="200" height="200" muted style="margin: 0;" @click="change_law('law1')">
-                        <source src="/Arc/Architecture/solve/flower/Blackflower2/Blackflowerps2.mp4" type="video/mp4">
+                    <video src="/Arc/Architecture/solve/flower/Blackflower2/Blackflowerps2.mp4" @mouseover="Blooming_flowers(true, 'vid7')" @mouseleave="Blooming_flowers(false, 'vid7')" id="vid7" width="200" height="200" muted style="margin: 0;" @click="change_law('law1')">
+                        <!-- <source src="/Arc/Architecture/solve/flower/Blackflower2/Blackflowerps2.mp4" type="video/mp4"> -->
                     </video> <br>
                     <p>กฎหมายลาคลอด</p>
                 </div>
@@ -136,8 +136,8 @@
             </div>
             <div v-if="what_law == 'law0'" class="row">
                 <div class="col-7">
-                    <video autoplay muted style="margin: 0;" class="home_bg_vdo2" id="law_vdo1">
-                        <source src="Architecture/solve/law/Election.mp4" type="video/mp4">
+                    <video src="Architecture/solve/law/Election.mp4" autoplay muted style="margin: 0;" class="home_bg_vdo2" id="law_vdo1">
+                        <!-- <source src="Architecture/solve/law/Election.mp4" type="video/mp4"> -->
                     </video>
                 </div>
                 <div class="col-5">
@@ -151,8 +151,8 @@
             </div>
             <div v-if="what_law == 'law1'" class="row">
                 <div class="col-5">
-                    <video autoplay muted style="margin: 0;" class="home_bg_vdo2" id="law_vdo2">
-                        <source src="Architecture/solve/law/Maternity leave1.mp4" type="video/mp4">
+                    <video src="Architecture/solve/law/Maternity leave1.mp4" autoplay muted style="margin: 0;" class="home_bg_vdo2" id="law_vdo2">
+                        <!-- <source src="Architecture/solve/law/Maternity leave1.mp4" type="video/mp4"> -->
                     </video>
                 </div>
                 <div class="col-7">
@@ -172,8 +172,8 @@
             <div v-if="what_draft_law == 'Main'" class="row align-items-center">
 
                 <div class="col-4 align-self-center text-center" v-if="!status_draft_law[0]">
-                    <video @mouseover="Blooming_flowers(true, 'vid0')" @mouseleave="Blooming_flowers(false, 'vid0')" id="vid0" width="200" height="200" muted style="margin: 0;" @click="change_draw_law('draw_law0')">
-                        <source src="/Arc/Architecture/solve/flower/Whiteflowers/Whiteflowersps.mp4" type="video/mp4">
+                    <video src="/Arc/Architecture/solve/flower/Whiteflowers/Whiteflowersps.mp4" @mouseover="Blooming_flowers(true, 'vid0')" @mouseleave="Blooming_flowers(false, 'vid0')" id="vid0" width="200" height="200" muted style="margin: 0;" @click="change_draw_law('draw_law0')">
+                        <!-- <source src="/Arc/Architecture/solve/flower/Whiteflowers/Whiteflowersps.mp4" type="video/mp4"> -->
                     </video> <br>
 
                     <p>ร่าง{{info.Draftlaw[0].DLName1}}
@@ -185,8 +185,8 @@
                 </div>
 
                 <div class="col-4 align-self-center text-center" v-if="!status_draft_law[1]">
-                    <video @mouseover="Blooming_flowers(true, 'vid1')" @mouseleave="Blooming_flowers(false, 'vid1')" id="vid1" width="200" height="200" muted style="margin: 0;" @click="change_draw_law('draw_law1')">
-                        <source src="/Arc/Architecture/solve/flower/Purpleflowers/Purpleflowers-3.mp4" type="video/mp4">
+                    <video src="/Arc/Architecture/solve/flower/Purpleflowers/Purpleflowers-3.mp4" @mouseover="Blooming_flowers(true, 'vid1')" @mouseleave="Blooming_flowers(false, 'vid1')" id="vid1" width="200" height="200" muted style="margin: 0;" @click="change_draw_law('draw_law1')">
+                        <!-- <source src="/Arc/Architecture/solve/flower/Purpleflowers/Purpleflowers-3.mp4" type="video/mp4"> -->
                     </video> <br>
                     <p>ร่าง{{info.Draftlaw[1].DLName1}}</p>
                 </div>
@@ -195,8 +195,8 @@
                 </div>
 
                 <div class="col-4 align-self-center text-center" v-if="!status_draft_law[2]">
-                    <video @mouseover="Blooming_flowers(true, 'vid2')" @mouseleave="Blooming_flowers(false, 'vid2')" id="vid2" width="200" height="200" muted style="margin: 0;" @click="change_draw_law('draw_law2')">
-                        <source src="/Arc/Architecture/solve/flower/Pinkflowers/Pinkflowersps.mp4" type="video/mp4">
+                    <video src="/Arc/Architecture/solve/flower/Pinkflowers/Pinkflowersps.mp4" @mouseover="Blooming_flowers(true, 'vid2')" @mouseleave="Blooming_flowers(false, 'vid2')" id="vid2" width="200" height="200" muted style="margin: 0;" @click="change_draw_law('draw_law2')">
+                        <!-- <source src="/Arc/Architecture/solve/flower/Pinkflowers/Pinkflowersps.mp4" type="video/mp4"> -->
                     </video> <br>
 
                     <p class="Draft">
@@ -212,8 +212,8 @@
                 </div>
                 <div class="col-2"></div>
                 <div class="col-4 align-self-center text-center" v-if="!status_draft_law[3]">
-                    <video @mouseover="Blooming_flowers(true, 'vid3')" @mouseleave="Blooming_flowers(false, 'vid3')" id="vid3" width="200" height="200" muted style="margin: 0;" @click="change_draw_law('draw_law3')">
-                        <source src="/Arc/Architecture/solve/flower/Blueflowers/Blueflowersps.mp4" type="video/mp4">
+                    <video src="/Arc/Architecture/solve/flower/Blueflowers/Blueflowersps.mp4" @mouseover="Blooming_flowers(true, 'vid3')" @mouseleave="Blooming_flowers(false, 'vid3')" id="vid3" width="200" height="200" muted style="margin: 0;" @click="change_draw_law('draw_law3')">
+                        <!-- <source src="/Arc/Architecture/solve/flower/Blueflowers/Blueflowersps.mp4" type="video/mp4"> -->
                     </video> <br>
                     <p>ร่าง{{info.Draftlaw[3].DLName1}}</p>
                 </div>
@@ -222,8 +222,8 @@
                 </div>
 
                 <div class="col align-self-center text-center" v-if="!status_draft_law[4]">
-                    <video @mouseover="Blooming_flowers(true, 'vid4')" @mouseleave="Blooming_flowers(false, 'vid4')" id="vid4" width="200" height="200" muted style="margin: 0;" @click="change_draw_law('draw_law4')">
-                        <source src="/Arc/Architecture/solve/flower/Redflowers/Redflowersps.mp4" type="video/mp4">
+                    <video src="/Arc/Architecture/solve/flower/Redflowers/Redflowersps.mp4" @mouseover="Blooming_flowers(true, 'vid4')" @mouseleave="Blooming_flowers(false, 'vid4')" id="vid4" width="200" height="200" muted style="margin: 0;" @click="change_draw_law('draw_law4')">
+                        <!-- <source src="/Arc/Architecture/solve/flower/Redflowers/Redflowersps.mp4" type="video/mp4"> -->
                     </video> <br>
                     <p>ร่าง{{info.Draftlaw[4].DLName1}}</p>
                 </div>
@@ -233,14 +233,13 @@
             </div>
             <div v-if="what_draft_law == 'draw_law0'" class="row">
                 <div class="col-7">
-                    <video autoplay muted style="margin: 0;" class="vdo1 home_bg_vdo2" id="draft_vdo">
-                        <source src="Architecture/solve/draftlaw/Freeabortionlaw.mp4" type="video/mp4">
+                    <video src="Architecture/solve/draftlaw/Freeabortionlaw.mp4" autoplay muted style="margin: 0;" class="vdo1 home_bg_vdo2" id="draft_vdo">
+                        <!-- <source src="Architecture/solve/draftlaw/Freeabortionlaw.mp4" type="video/mp4"> -->
                     </video>
                 </div>
                 <div class="col-5">
                     <p class="topic_text" id="draft_topic_text">
-                        {{info.Draftlaw[0].DLName1}}<br>
-                        <d style="font-size: 20pt;">{{info.Draftlaw[0].DLName2}}</d>
+                        {{info.Draftlaw[0].DLName1}}<br>{{info.Draftlaw[0].DLName2}}
                     </p>
                     <p class="text" id="draft_text">
                         {{info.Draftlaw[0].DLMean1}}
@@ -249,14 +248,13 @@
             </div>
             <div v-if="what_draft_law == 'draw_law1'" class="row">
                 <div class="col-5">
-                    <video autoplay muted style="margin: 0;" class="vdo2 home_bg_vdo2">
-                        <source src="Architecture/solve/draftlaw/Married with children 1.mp4" type="video/mp4">
+                    <video src="Architecture/solve/draftlaw/Married with children 1.mp4" autoplay muted style="margin: 0;" class="vdo2 home_bg_vdo2">
+                        <!-- <source src="Architecture/solve/draftlaw/Married with children 1.mp4" type="video/mp4"> -->
                     </video>
                 </div>
                 <div class="col-7">
                     <p style="margin-top:2.562225475841874vw;" class="topic_text">
-                        {{info.Draftlaw[1].DLName1}}<br>
-                        <d style="font-size: 20pt;">{{info.Draftlaw[1].DLName2}}</d>
+                        {{info.Draftlaw[1].DLName1}}<br>{{info.Draftlaw[1].DLName2}}
                     </p>
                     <p style="margin-top:2.562225475841874vw;" class="text">
                         {{info.Draftlaw[1].DLMean1}}
@@ -265,15 +263,14 @@
             </div>
             <div v-if="what_draft_law == 'draw_law2'" class="row">
                 <div style="margin-top:10;" class="col-5">
-                    <video autoplay muted style="margin: 0;" class="vdo3 home_bg_vdo2">
-                        <source src="Architecture/solve/draftlaw/Safe city laws for women.mp4" type="video/mp4">
+                    <video src="Architecture/solve/draftlaw/Safe city laws for women.mp4" autoplay muted style="margin: 0;" class="vdo3 home_bg_vdo2">
+                        <!-- <source src="Architecture/solve/draftlaw/Safe city laws for women.mp4" type="video/mp4"> -->
                     </video>
                 </div>
                 <div class="col-7">
                     <!--แก้ layout-->
                     <p style="margin-top:2.562225475841874vw; margin-left: 3.294289897510981vw" class="topic_text">
-                        {{info.Draftlaw[2].DLName1}}<br>
-                        <d style="font-size: 20pt;">{{info.Draftlaw[2].DLName2}}</d>
+                        {{info.Draftlaw[2].DLName1}}<br> {{info.Draftlaw[2].DLName2}}
                     </p>
                     <p style="margin-top:2.562225475841874vw; margin-left: 3.294289897510981vw" class="text">
                         {{info.Draftlaw[2].DLMean1}}<br><br> {{info.Draftlaw[2].DLMean2}}
@@ -282,14 +279,13 @@
             </div>
             <div v-if="what_draft_law == 'draw_law3'" class="row">
                 <div class="col-5">
-                    <video autoplay muted style="margin: 0;" class="vdo4 home_bg_vdo2">
-                        <source src="Architecture/solve/draftlaw/Dress law in various professions.mp4" type="video/mp4">
+                    <video src="Architecture/solve/draftlaw/Dress law in various professions.mp4" autoplay muted style="margin: 0;" class="vdo4 home_bg_vdo2">
+                        <!-- <source src="Architecture/solve/draftlaw/Dress law in various professions.mp4" type="video/mp4"> -->
                     </video>
                 </div>
                 <div class="col-7">
                     <p style="margin-top:2.562225475841874vw;" class="topic_text">
-                        {{info.Draftlaw[3].DLName1}}<br>
-                        <d style="font-size: 20pt;">{{info.Draftlaw[3].DLName2}}</d>
+                        {{info.Draftlaw[3].DLName1}}<br>{{info.Draftlaw[3].DLName2}}
                     </p>
                     <p style="margin-top:2.562225475841874vw;" class="text">
                         {{info.Draftlaw[3].DLMean1}}<br><br> {{info.Draftlaw[3].DLMean2}}
@@ -298,14 +294,13 @@
             </div>
             <div v-if="what_draft_law == 'draw_law4'" class="row">
                 <div class="col-5">
-                    <video autoplay muted style="margin: 0;" class="vdo5 home_bg_vdo2">
-                        <source src="Architecture/solve/draftlaw/prostitute.mp4" type="video/mp4">
+                    <video src="Architecture/solve/draftlaw/prostitute.mp4" autoplay muted style="margin: 0;" class="vdo5 home_bg_vdo2">
+                        <!-- <source src="Architecture/solve/draftlaw/prostitute.mp4" type="video/mp4"> -->
                     </video>
                 </div>
                 <div class="col-7">
                     <p class="topic_text">
-                        {{info.Draftlaw[4].DLName1}}<br>
-                        <d style="font-size: 20pt;">{{info.Draftlaw[4].DLName2}}</d>
+                        {{info.Draftlaw[4].DLName1}}<br>{{info.Draftlaw[4].DLName2}}
                     </p>
                     <p class="text">
                         {{info.Draftlaw[4].DLMean1}}<br><br> {{info.Draftlaw[4].DLMean2}}
@@ -359,7 +354,7 @@
         <!-- รูป ผญ. 2 คนซ้ายขวาหน้า Law กับ DraftLaw -->
         <img data-aos="fade-up-right" data-aos-anchor-placement="top-bottom" v-if="(what_page == 'Law' && what_law == 'Main') || (what_page == 'Draftlaw' && what_draft_law == 'Main' )" src="/Arc/Architecture/solve/Left person.png" class="bg_ladl1">
         <img data-aos="fade-up-left" data-aos-anchor-placement="top-bottom" v-if="(what_page == 'Law' && what_law == 'Main') || (what_page == 'Draftlaw' && what_draft_law == 'Main' )" src="/Arc/Architecture/solve/Right person.png" class="bg_ladl2">
-        <img v-if="(what_page == 'Law' && what_law == 'Main') || (what_page == 'Draftlaw' && what_draft_law == 'Main' )" src="/Arc/Architecture/solve/Artboard 2.png" class="bg_ladl3">
+        <!-- <img v-if="(what_page == 'Law' && what_law == 'Main') || (what_page == 'Draftlaw' && what_draft_law == 'Main' )" src="/Arc/Architecture/solve/Artboard 2.png" class="bg_ladl3"> -->
         <!-- รูป ผญ. 2 คนซ้ายขวาหน้า Law กับ DraftLaw -->
         <!-- ปุ่มกด Back -->
         <button v-if="(what_page == 'Law' || what_page == 'Draftlaw') && (what_law != 'Main' || what_draft_law != 'Main' )" @click="change_law('Main'), change_draw_law('Main')" id="Btn_top">Back</button>
