--- a/Arc/index.html
+++ b/Arc/index.html
@@ -114,22 +114,22 @@
             <div v-if="what_law == 'Main'" class="row justify-content-around">
                 <div class="col-1"></div>
                 <div class="col-4 align-self-center text-center" v-if="!status_law[0]">
-                    <video src="/Arc/Architecture/solve/flower/Anotherredflower/Anotherredflowerps.mp4" @mouseover="Blooming_flowers(true, 'vid6')" @mouseleave="Blooming_flowers(false, 'vid6')" id="vid6" width="200" height="200" muted style="margin: 0;" @click="change_law('law0')">
-                        <!-- <source src="/Arc/Architecture/solve/flower/Anotherredflower/Anotherredflowerps.mp4"
+                    <video src="Architecture/solve/flower/Anotherredflower/Anotherredflowerps.mp4" @mouseover="Blooming_flowers(true, 'vid6')" @mouseleave="Blooming_flowers(false, 'vid6')" id="vid6" width="200" height="200" muted style="margin: 0;" @click="change_law('law0')">
+                        <!-- <source src="Architecture/solve/flower/Anotherredflower/Anotherredflowerps.mp4"
                             type="video/mp4"> -->
                     </video> <br>
                     <p>กฎหมายการเลือกตั้ง</p>
                 </div>
-                <div class="col-4 align-self-center text-center" v-if="status_law[0]"><img @click="change_law('law0')" src="/Arc/Architecture/solve/flower/Anotherredflower/Anotherredflower.png" style="width: 200px; height: 200px;"><br>
+                <div class="col-4 align-self-center text-center" v-if="status_law[0]"><img @click="change_law('law0')" src="Architecture/solve/flower/Anotherredflower/Anotherredflower.png" style="width: 200px; height: 200px;"><br>
                     <p>กฎหมายการเลือกตั้ง</p>
                 </div>
                 <div class="col align-self-center text-center" v-if="!status_law[1]">
-                    <video src="/Arc/Architecture/solve/flower/Blackflower2/Blackflowerps2.mp4" @mouseover="Blooming_flowers(true, 'vid7')" @mouseleave="Blooming_flowers(false, 'vid7')" id="vid7" width="200" height="200" muted style="margin: 0;" @click="change_law('law1')">
-                        <!-- <source src="/Arc/Architecture/solve/flower/Blackflower2/Blackflowerps2.mp4" type="video/mp4"> -->
+                    <video src="Architecture/solve/flower/Blackflower2/Blackflowerps2.mp4" @mouseover="Blooming_flowers(true, 'vid7')" @mouseleave="Blooming_flowers(false, 'vid7')" id="vid7" width="200" height="200" muted style="margin: 0;" @click="change_law('law1')">
+                        <!-- <source src="Architecture/solve/flower/Blackflower2/Blackflowerps2.mp4" type="video/mp4"> -->
                     </video> <br>
                     <p>กฎหมายลาคลอด</p>
                 </div>
-                <div class="col align-self-center text-center" v-if="status_law[1]"><img @click="change_law('law1')" src="/Arc/Architecture/solve/flower/Blackflower2/Blackflower2.png" style="width: 200px; height: 200px;"><br>
+                <div class="col align-self-center text-center" v-if="status_law[1]"><img @click="change_law('law1')" src="Architecture/solve/flower/Blackflower2/Blackflower2.png" style="width: 200px; height: 200px;"><br>
                     <p>กฎหมายลาคลอด</p>
                 </div>
 
@@ -172,31 +172,31 @@
             <div v-if="what_draft_law == 'Main'" class="row align-items-center">
 
                 <div class="col-4 align-self-center text-center" v-if="!status_draft_law[0]">
-                    <video src="/Arc/Architecture/solve/flower/Whiteflowers/Whiteflowersps.mp4" @mouseover="Blooming_flowers(true, 'vid0')" @mouseleave="Blooming_flowers(false, 'vid0')" id="vid0" width="200" height="200" muted style="margin: 0;" @click="change_draw_law('draw_law0')">
-                        <!-- <source src="/Arc/Architecture/solve/flower/Whiteflowers/Whiteflowersps.mp4" type="video/mp4"> -->
+                    <video src="Architecture/solve/flower/Whiteflowers/Whiteflowersps.mp4" @mouseover="Blooming_flowers(true, 'vid0')" @mouseleave="Blooming_flowers(false, 'vid0')" id="vid0" width="200" height="200" muted style="margin: 0;" @click="change_draw_law('draw_law0')">
+                        <!-- <source src="Architecture/solve/flower/Whiteflowers/Whiteflowersps.mp4" type="video/mp4"> -->
                     </video> <br>
 
                     <p>ร่าง{{info.Draftlaw[0].DLName1}}
                     </p>
                 </div>
-                <div class="col-4 align-self-center text-center" v-if="status_draft_law[0]"><img @click="change_draw_law('draw_law0')" src="/Arc/Architecture/solve/flower/Whiteflowers/Whiteflowers.png" style="width: 200px; height: 200px;"><br>
+                <div class="col-4 align-self-center text-center" v-if="status_draft_law[0]"><img @click="change_draw_law('draw_law0')" src="Architecture/solve/flower/Whiteflowers/Whiteflowers.png" style="width: 200px; height: 200px;"><br>
                     <p>ร่าง{{info.Draftlaw[0].DLName1}}</p>
 
                 </div>
 
                 <div class="col-4 align-self-center text-center" v-if="!status_draft_law[1]">
-                    <video src="/Arc/Architecture/solve/flower/Purpleflowers/Purpleflowers-3.mp4" @mouseover="Blooming_flowers(true, 'vid1')" @mouseleave="Blooming_flowers(false, 'vid1')" id="vid1" width="200" height="200" muted style="margin: 0;" @click="change_draw_law('draw_law1')">
-                        <!-- <source src="/Arc/Architecture/solve/flower/Purpleflowers/Purpleflowers-3.mp4" type="video/mp4"> -->
+                    <video src="Architecture/solve/flower/Purpleflowers/Purpleflowers-3.mp4" @mouseover="Blooming_flowers(true, 'vid1')" @mouseleave="Blooming_flowers(false, 'vid1')" id="vid1" width="200" height="200" muted style="margin: 0;" @click="change_draw_law('draw_law1')">
+                        <!-- <source src="Architecture/solve/flower/Purpleflowers/Purpleflowers-3.mp4" type="video/mp4"> -->
                     </video> <br>
                     <p>ร่าง{{info.Draftlaw[1].DLName1}}</p>
                 </div>
-                <div class="col-4 align-self-center text-center" v-if="status_draft_law[1]"><img @click="change_draw_law('draw_law1')" src="/Arc/Architecture/solve/flower/Purpleflowers/Purpleflowers.png" style="width: 200px; height: 200px;"><br>
+                <div class="col-4 align-self-center text-center" v-if="status_draft_law[1]"><img @click="change_draw_law('draw_law1')" src="Architecture/solve/flower/Purpleflowers/Purpleflowers.png" style="width: 200px; height: 200px;"><br>
                     <p>ร่าง{{info.Draftlaw[1].DLName1}}</p>
                 </div>
 
                 <div class="col-4 align-self-center text-center" v-if="!status_draft_law[2]">
-                    <video src="/Arc/Architecture/solve/flower/Pinkflowers/Pinkflowersps.mp4" @mouseover="Blooming_flowers(true, 'vid2')" @mouseleave="Blooming_flowers(false, 'vid2')" id="vid2" width="200" height="200" muted style="margin: 0;" @click="change_draw_law('draw_law2')">
-                        <!-- <source src="/Arc/Architecture/solve/flower/Pinkflowers/Pinkflowersps.mp4" type="video/mp4"> -->
+                    <video src="Architecture/solve/flower/Pinkflowers/Pinkflowersps.mp4" @mouseover="Blooming_flowers(true, 'vid2')" @mouseleave="Blooming_flowers(false, 'vid2')" id="vid2" width="200" height="200" muted style="margin: 0;" @click="change_draw_law('draw_law2')">
+                        <!-- <source src="Architecture/solve/flower/Pinkflowers/Pinkflowersps.mp4" type="video/mp4"> -->
                     </video> <br>
 
                     <p class="Draft">
@@ -204,7 +204,7 @@
                     </p>
 
                 </div>
-                <div class="col-4 align-self-center text-center" v-if="status_draft_law[2]"><img @click="change_draw_law('draw_law2')" src="/Arc/Architecture/solve/flower/Pinkflowers/Pinkflowers.png" style="width: 200px; height: 200px;"><br>
+                <div class="col-4 align-self-center text-center" v-if="status_draft_law[2]"><img @click="change_draw_law('draw_law2')" src="Architecture/solve/flower/Pinkflowers/Pinkflowers.png" style="width: 200px; height: 200px;"><br>
 
                     <p>ร่าง{{info.Draftlaw[2].DLName1}}
                     </p>
@@ -212,22 +212,22 @@
                 </div>
                 <div class="col-2"></div>
                 <div class="col-4 align-self-center text-center" v-if="!status_draft_law[3]">
-                    <video src="/Arc/Architecture/solve/flower/Blueflowers/Blueflowersps.mp4" @mouseover="Blooming_flowers(true, 'vid3')" @mouseleave="Blooming_flowers(false, 'vid3')" id="vid3" width="200" height="200" muted style="margin: 0;" @click="change_draw_law('draw_law3')">
-                        <!-- <source src="/Arc/Architecture/solve/flower/Blueflowers/Blueflowersps.mp4" type="video/mp4"> -->
+                    <video src="Architecture/solve/flower/Blueflowers/Blueflowersps.mp4" @mouseover="Blooming_flowers(true, 'vid3')" @mouseleave="Blooming_flowers(false, 'vid3')" id="vid3" width="200" height="200" muted style="margin: 0;" @click="change_draw_law('draw_law3')">
+                        <!-- <source src="Architecture/solve/flower/Blueflowers/Blueflowersps.mp4" type="video/mp4"> -->
                     </video> <br>
                     <p>ร่าง{{info.Draftlaw[3].DLName1}}</p>
                 </div>
-                <div class="col-4 align-self-center text-center" v-if="status_draft_law[3]"><img @click="change_draw_law('draw_law3')" src="/Arc/Architecture/solve/flower/Blueflowers/Blueflowers.png" style="width: 200px; height: 200px;"><br>
+                <div class="col-4 align-self-center text-center" v-if="status_draft_law[3]"><img @click="change_draw_law('draw_law3')" src="Architecture/solve/flower/Blueflowers/Blueflowers.png" style="width: 200px; height: 200px;"><br>
                     <p>ร่าง{{info.Draftlaw[3].DLName1}}</p>
                 </div>
 
                 <div class="col align-self-center text-center" v-if="!status_draft_law[4]">
-                    <video src="/Arc/Architecture/solve/flower/Redflowers/Redflowersps.mp4" @mouseover="Blooming_flowers(true, 'vid4')" @mouseleave="Blooming_flowers(false, 'vid4')" id="vid4" width="200" height="200" muted style="margin: 0;" @click="change_draw_law('draw_law4')">
-                        <!-- <source src="/Arc/Architecture/solve/flower/Redflowers/Redflowersps.mp4" type="video/mp4"> -->
+                    <video src="Architecture/solve/flower/Redflowers/Redflowersps.mp4" @mouseover="Blooming_flowers(true, 'vid4')" @mouseleave="Blooming_flowers(false, 'vid4')" id="vid4" width="200" height="200" muted style="margin: 0;" @click="change_draw_law('draw_law4')">
+                        <!-- <source src="Architecture/solve/flower/Redflowers/Redflowersps.mp4" type="video/mp4"> -->
                     </video> <br>
                     <p>ร่าง{{info.Draftlaw[4].DLName1}}</p>
                 </div>
-                <div class="col align-self-center text-center" v-if="status_draft_law[4]"><img @click="change_draw_law('draw_law4')" src="/Arc/Architecture/solve/flower/Redflowers/Redflowers2.png" style="width: 200px; height: 200px;"><br>
+                <div class="col align-self-center text-center" v-if="status_draft_law[4]"><img @click="change_draw_law('draw_law4')" src="Architecture/solve/flower/Redflowers/Redflowers2.png" style="width: 200px; height: 200px;"><br>
                     <p>ร่าง{{info.Draftlaw[4].DLName1}}</p>
                 </div>
             </div>
@@ -352,9 +352,9 @@
         </div>
         <!-- หน้า Contact -->
         <!-- รูป ผญ. 2 คนซ้ายขวาหน้า Law กับ DraftLaw -->
-        <img data-aos="fade-up-right" data-aos-anchor-placement="top-bottom" v-if="(what_page == 'Law' && what_law == 'Main') || (what_page == 'Draftlaw' && what_draft_law == 'Main' )" src="/Arc/Architecture/solve/Left person.png" class="bg_ladl1">
-        <img data-aos="fade-up-left" data-aos-anchor-placement="top-bottom" v-if="(what_page == 'Law' && what_law == 'Main') || (what_page == 'Draftlaw' && what_draft_law == 'Main' )" src="/Arc/Architecture/solve/Right person.png" class="bg_ladl2">
-        <!-- <img v-if="(what_page == 'Law' && what_law == 'Main') || (what_page == 'Draftlaw' && what_draft_law == 'Main' )" src="/Arc/Architecture/solve/Artboard 2.png" class="bg_ladl3"> -->
+        <img data-aos="fade-up-right" data-aos-anchor-placement="top-bottom" v-if="(what_page == 'Law' && what_law == 'Main') || (what_page == 'Draftlaw' && what_draft_law == 'Main' )" src="Architecture/solve/Left person.png" class="bg_ladl1">
+        <img data-aos="fade-up-left" data-aos-anchor-placement="top-bottom" v-if="(what_page == 'Law' && what_law == 'Main') || (what_page == 'Draftlaw' && what_draft_law == 'Main' )" src="Architecture/solve/Right person.png" class="bg_ladl2">
+        <!-- <img v-if="(what_page == 'Law' && what_law == 'Main') || (what_page == 'Draftlaw' && what_draft_law == 'Main' )" src="Architecture/solve/Artboard 2.png" class="bg_ladl3"> -->
         <!-- รูป ผญ. 2 คนซ้ายขวาหน้า Law กับ DraftLaw -->
         <!-- ปุ่มกด Back -->
         <button v-if="(what_page == 'Law' || what_page == 'Draftlaw') && (what_law != 'Main' || what_draft_law != 'Main' )" @click="change_law('Main'), change_draw_law('Main')" id="Btn_top">Back</button>
