--- a/Arc/index.html
+++ b/Arc/index.html
@@ -253,10 +253,10 @@
                     </video>
                 </div>
                 <div class="col-7">
-                    <p style="margin-top:2.562225475841874vw;" class="topic_text">
+                    <p class="lay_text2 topic_text">
                         {{info.Draftlaw[1].DLName1}}<br>{{info.Draftlaw[1].DLName2}}
                     </p>
-                    <p style="margin-top:2.562225475841874vw;" class="text">
+                    <p class="lay_text2 text">
                         {{info.Draftlaw[1].DLMean1}}
                     </p>
                 </div>
@@ -269,10 +269,10 @@
                 </div>
                 <div class="col-7">
                     <!--แก้ layout-->
-                    <p style="margin-top:2.562225475841874vw; margin-left: 3.294289897510981vw" class="topic_text">
+                    <p class="lay_text3 topic_text">
                         {{info.Draftlaw[2].DLName1}}<br> {{info.Draftlaw[2].DLName2}}
                     </p>
-                    <p style="margin-top:2.562225475841874vw; margin-left: 3.294289897510981vw" class="text">
+                    <p class="lay_text3 text">
                         {{info.Draftlaw[2].DLMean1}}<br><br> {{info.Draftlaw[2].DLMean2}}
                     </p>
                 </div>
@@ -284,10 +284,10 @@
                     </video>
                 </div>
                 <div class="col-7">
-                    <p style="margin-top:2.562225475841874vw;" class="topic_text">
+                    <p class="lay_text4 topic_text">
                         {{info.Draftlaw[3].DLName1}}<br>{{info.Draftlaw[3].DLName2}}
                     </p>
-                    <p style="margin-top:2.562225475841874vw;" class="text">
+                    <p class="lay_text4 text">
                         {{info.Draftlaw[3].DLMean1}}<br><br> {{info.Draftlaw[3].DLMean2}}
                     </p>
                 </div>
@@ -299,10 +299,10 @@
                     </video>
                 </div>
                 <div class="col-7">
-                    <p class="topic_text">
+                    <p class="lay_text5 topic_text">
                         {{info.Draftlaw[4].DLName1}}<br>{{info.Draftlaw[4].DLName2}}
                     </p>
-                    <p class="text">
+                    <p class="lay_text5 text">
                         {{info.Draftlaw[4].DLMean1}}<br><br> {{info.Draftlaw[4].DLMean2}}
                     </p>
                 </div>
