--- a/Arc/index.html
+++ b/Arc/index.html
@@ -75,11 +75,7 @@
         <!-- หน้า Home -->
         <div v-if="what_page == 'Home'" class="container">
             <div class="row">
-                <div data-aos-anchor-placement="top-center" data-aos="fade-right" class="col-6">
-                    <video src="Architecture/solve/homepage/Waterdrop1.mp4" autoplay muted style="margin: 0;" class="home_bg_vdo">
-                        <!-- <source src="Architecture/solve/homepage/Waterdrop1.mp4" type="video/mp4"> -->
-                    </video>
-                </div>
+                <video data-aos-anchor-placement="top-center" data-aos="fade-right" src="Architecture/solve/homepage/Waterdrop1.mp4" autoplay muted style="margin: 0;" class="col-6 home_bg_vdo"></video>
                 <div data-aos-anchor-placement="top-center" data-aos="fade-left" class="col-6" style="padding-left: 5.15625vw; padding-right: -5.15625vw;">
                     <p class="topic_text home_topic_text" style="color: #5382bf;">
                         {{info.Home[0].LawName}}
