แก้หน้าtime to bloom

--- a/Arc/index.html
+++ b/Arc/index.html
@@ -230,15 +230,15 @@
             </div>
             <div v-if="what_draft_law == 'draw_law0'" class="row">
                 <div class="col-7">
-                    <video src="Architecture/solve/draftlaw/Freeabortionlaw.mp4" autoplay muted style="margin: 0;" class="vdo1 home_bg_vdo2" id="draft_vdo">
+                    <video src="Architecture/solve/draftlaw/Freeabortionlaw1.mp4" autoplay muted style="margin: 0;" class="vdo1 home_bg_vdo2" id="draft_vdo">
                         <!-- <source src="Architecture/solve/draftlaw/Freeabortionlaw.mp4" type="video/mp4"> -->
                     </video>
                 </div>
                 <div class="col-5">
-                    <p class="topic_text" id="draft_topic_text">
+                    <p class="lay_text1 topic_text" id="draft_topic_text">
                         {{info.Draftlaw[0].DLName1}}<br>{{info.Draftlaw[0].DLName2}}
                     </p>
-                    <p class="text" id="draft_text">
+                    <p class="lay_text1 text" id="draft_text">
                         {{info.Draftlaw[0].DLMean1}}
                     </p>
                 </div>
